# voetje_encoding_engine

./: .gitignore  Cargo.toml  build_android.sh  build_ios.sh  cargo-config.toml  cbindgen.toml  e_engine.h  readme.md  tmp.h  todo.md
src/: encoding_funcs.rs  lib.rs  tests.rs
src/encoding_funcs/: utils.rs
